--- a/index.html
+++ b/index.html
@@ -300,17 +300,22 @@
           <h3 class="pricing__title title">What deal suit you perfect</h3>
           <h5 class="pricing__subtitle subtitle">Meet our pricing plan</h5>
           <div class="pricing__tab">
-            <button class="pricing__tab-btn-1">Monthly Plan</button>
-            <button class="pricing__tab-btn-2">Annual Plan</button>
+            <button class="pricing__tab-btn-1 tab__link-1">Monthly Plan</button>
+            <button class="pricing__tab-btn-2 tab__link-2">Annual Plan</button>
           </div>
           <div class="pricing__box">
-            <div class="pricing__box-item-1 pricing__box-item">
+            <div class="pricing__box-item-1 pricing__box-item"  id="price__box-1">
               <div class="pricing__box-item-main">
                 <img
                   src="images/pricing-icon-1.svg"
                   class="pricing__box-item-img"
                 />
-                <h3 class="pricing__box-item-title">For Team pack</h3>
+                <h3 class="pricing__box-item-title" id="old__tab-title-1">
+                  For Team pack
+                </h3>
+                <h3 class="pricing__box-item-title" id="tab__title-1">
+                  For Starter
+                </h3>
                 <ul class="pricing__box-list">
                   <li class="pricing__box-list-item">
                     <img src="images/tick__icon.svg" />
@@ -336,7 +341,8 @@
               </div>
               <div class="pricing__box-item-footer">
                 <h5 class="pricing__box-item-footer-title">
-                  Starting from <span>29.99/mo</span>
+                  Starting from<span id="old__tab-price-1">29.99/mo</span
+                  ><span id="tab__price-1">45.99/mo</span>
                 </h5>
                 <svg
                   width="20"
@@ -352,14 +358,19 @@
                 </svg>
               </div>
             </div>
-            <div class="pricing__box-item-2 pricing__box-item">
+            <div class="pricing__box-item-2 pricing__box-item" id="price__box-2">
               <div class="pricing__box-item-main">
                 <h5 class="recomend">Recommended</h5>
                 <img
                   src="images/pricing-icon-2.svg"
                   class="pricing__box-item-img"
                 />
-                <h3 class="pricing__box-item-title">For Organization pack</h3>
+                <h3 class="pricing__box-item-title" id="old__tab-title-2">
+                  For Organization pack
+                </h3>
+                <h3 class="pricing__box-item-title" id="tab__title-2">
+                  For Professional
+                </h3>
                 <ul class="pricing__box-list">
                   <li class="pricing__box-list-item">
                     <img src="images/tick__icon.svg" />
@@ -383,7 +394,8 @@
               </div>
               <div class="pricing__box-item-footer">
                 <h5 class="pricing__box-item-footer-title">
-                  Starting from <span>29.99/mo</span>
+                  Starting from<span id="old__tab-price-2">29.99/mo</span
+                  ><span id="tab__price-2">50.95/mo</span>
                 </h5>
                 <svg
                   width="20"
